syntax = "proto3";

option csharp_namespace = "SkillUpHub.AuthService";

package AuthService;

service AuthService{
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest{
  string login = 1;
  string password = 2;
}

message LoginResponse{
  string token = 1;
}

message RegisterRequest{
  string Login = 1;
  string Password = 2;
  string Email = 3;
}

message RegisterResponse{
  bool isSuccess = 1;
}